--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -6,8 +6,8 @@
                 Need Advice?<br />Don't worry we've got your back!!
             </p>
             <div>
-                <button type="button"><a href="/rating" style="text-decoration: none;"></a>GET STARTED</button>
-                <button type="button"><a href="#aboutus" style="text-decoration: none;">ABOUT US</a></button>
+                <button type="button">GET STARTED</button>
+                <button type="button">ABOUT US</button>
             </div>
         </div>
     </div>
