--- a/views/state-news.hbs
+++ b/views/state-news.hbs
@@ -7,249 +7,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>State news</title>
     <link rel="stylesheet" href="/css/news.css">
-    <style>
-        .bg-custom-1 {
-       background-color: #85144b;
-   }
-
-   .bg-custom-2 {
-   background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
-   }
-    </style>  
 </head>
 <body>
     <div class="main-container">
         {{> _header}}
-        <section>
-<div class="container">
-  
-  <form class="form-inline" style="width:100%; background-color:#72d6f56c; border:1px solid #4fd4fc6c; border-radius:2px;">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search state or city" aria-label="Search" id="state">
-    <button class="btn btn-outline-success my-2 my-sm-0" onclick="getState()" type="button">Search</button>
-  </form>
-
-  <div class="row text-center">
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.thehindu.com/elections/tamil-nadu-assembly/4h6wik/article34465505.ece/ALTERNATES/LANDSCAPE_615/Stalin" alt="" class="news-card-img" id="img0">
-          <h5 class="card-img-title">Live Updates: Biden and Congress Prepare for an Unusual Speech</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">The New York Times</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">2021-04-26T12:48:13Z</p></p>
-          <p class="card-description">
-            A presidents address to a joint session of Congress is typically a crowded affair, as lawmakers from both parties and their guests pack the House floor. But President Bidens speech on Wednesday, his          </p>
-          <a href="https://www.nytimes.com/live/2021/04/26/us/biden-news-today" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
+    <section>
+      <div class="container">
+        <form class="form-inline" id="state-form">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search state or city" aria-label="Search" id="state">
+            <button class="btn my-2 my-sm-0" onclick="getState()" type="button" id="form-button">Search</button>
+        </form>
+        <div class="row text-center" id="stateNewsResults"></div>
       </div>
+    </section> 
+    <div class="footer-bottom" style="height:2em;">
+      <p>copyright &copy;2021. designed by The Political Monger</p>
     </div>
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://images.indianexpress.com/2021/04/poll-vanathi-3col.jpg" alt="img2" id="img1" class="news-card-img">
-          <h5 class="card-img-title">Vote count in five Indian states begin amid pandemic</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://images.indianexpress.com/2021/05/stalin-1.jpg" alt="img2" id="img2" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b> <p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://images.indianexpress.com/2021/04/sasikala-1.jpg" alt="img3" id="img3" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at: </b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://images.indianexpress.com/2021/04/Trending-card-02-1.jpg" alt="img4" id="img4" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at: </b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img5" id="img5" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-         <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img6" id="img6" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-         <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img7" id="img7" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-          <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img8" id="img8" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-        <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img9" id="img9" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-         <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img10" id="img10" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-        <div class="col-md-4 card-container">
-      <div class="card card-flip">
-        <div class="front card-block">
-          <img src="https://www.thehindu.com/opinion/op-ed/gxsqvp/article34239014.ece/ALTERNATES/LANDSCAPE_615/5ththoothukudi" alt="img11" id="img11" class="news-card-img">
-          <h5 class="card-img-title">Card title here</h5>
-        </div>
-        <div class="back card-block">
-          <p class="card-author"><b>Published by:</b>
-            <p class="card-author-content">Investor's Business Daily</p>
-          </p>
-          <p class="card-date"><b>Published at:</b><p class="card-date-content">01-11-2019</p></p>
-          <p class="card-description">
-            Alphabet led the Nasdaq and S&P 500, Visa topped the Dow Jones today, but stocks opened mixed ahead of the Federal Reserve's rate policy news.
-          </p>
-          <a href="#" class="btn btn-outline-primary read-more">Read More</a>
-        </div>
-      </div>
-    </div>
-      </div>
-    </div>
-        </section> 
-        <div class="footer-bottom" style="height:2em;">
-            <p>copyright &copy;2021. designed by The Political Monger</p>
-        </div>
     </div>
      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
