--- a/public/css/rating.css
+++ b/public/css/rating.css
@@ -3,6 +3,7 @@ body{
     padding:0;
     font-family:Arial;
     background-color:#4fd4fc6c;
+    background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
 
 .center{
