--- a/public/css/sentiment-analysis.css
+++ b/public/css/sentiment-analysis.css
@@ -1,3 +1,6 @@
+body{
+    background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+}
 .info-text {
     font-size: 20px;
     margin: 20px auto
