--- a/views/sentiment.hbs
+++ b/views/sentiment.hbs
@@ -14,13 +14,8 @@
      {{> _header}} 
     <div class="container mt-3">
             <div class="row">
-                <div class="col-12 text-center">
-                    <h1>Twitter Sentiment Analysis</h1>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-12 info-text">
-                    Type in any hashtag or keyword and press enter to visualize Tweet Sentiment.
+                    Type in any the name of the party or hashtag press enter to visualize public sentiment
                 </div>
             </div>
             <div class="row">
