--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,8 +15,8 @@
                 Need Advice?<br />Don't worry we have got your back!!
             </p>
             <div>
-                <button type="button"><span></span>GET STARTED</button>
-                <button type="button"><span></span>ABOUT US</button>
+                <button type="button" class="header-button"><a href="/auth/google">GET STARTED</a></button>
+                <button type="button" class="header-button"><a href="/auth/google">ABOUT US</a></button>
             </div>
         </div>
     </div>
@@ -43,7 +43,7 @@
         <p>For any queries please feel free to reach out to us. We will try our best to respond to your queries!!!!</p>
         <div class="contact-div">
             <img src="/images/contact.png" alt="">
-            <form>
+            <form method="GET" action="/auth/google">
                 <input type="text" placeholder="Enter your name">
                 <input type="email" placeholder="Enter your email">
                 <input type="text" placeholder="Enter your phone">
@@ -68,16 +68,3 @@
             <p>copyright &copy;2021. designed by The Political Monger</p>
         </div>
    </section>
-
-
-<!--
-<h3><i class="fas fa-book-reader"></i> StoryBooks</h3>
-<div class="section">
-    <p class="lead">Create public and private stories from your life</p>
-</div>
-<div class="divider"></div>
-<div class="section">
-    <a href="/auth/google" class="btn red darken-1">
-        <i class="fab fa-google left"></i> Log In With Google
-    </a>
-</div>-->
