--- a/views/sentiment.hbs
+++ b/views/sentiment.hbs
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col-12 input-field">
                     <i class="material-icons prefix">#</i>
-                    <input data-intro="Enter in the any twitter hashtag here" data-position="right" type="text" id="tag-input" placeholder="Enter in a hashtag here">
+                    <input data-intro="Enter in the any twitter hashtag here" data-position="right" type="text" id="tag-input" placeholder="Enter party name">
                     <button class="btn btn-dark btn-search" onclick="searchParty()" value="search">
                         Search
                     </button>
@@ -64,7 +64,11 @@
                     </div>
                 </div>
             </div>
-        </div>  
+            
+        </div> 
+        <div class="footer-bottom" style="height:2em;">
+            <p>copyright &copy;2021. designed by The Political Monger</p>
+          </div> 
     <script src="/js/sentiment-analysis.js"></script>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
