--- a/public/css/rating.css
+++ b/public/css/rating.css
@@ -5,7 +5,10 @@ body{
     background-color:#4fd4fc6c;
     background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
-
+.container-rate{
+    height: 40vh;
+    margin-bottom:-6em;
+}
 .center{
     position:absolute;
     top:50%;
@@ -111,21 +114,28 @@ button:hover{
     margin:auto;
 }
 .rate-form{
-    border: 2px solid #2691d9;
-    padding: 10px;
+    padding: 17px;
     margin:auto;
-    border-radius: 20px;
-    background-color:white;
-    width:75%;
+    width:78%;
+    height:20em;
+    background-color:#99f54d52;
+    border:1px solid #66d6f800;
+    border-radius:5px;
 }
 #rating-submit{
-    background-color:#009688;
-    color:white;
+    background-color: #28a745;
+    color: #fff;
+    outline: none;
+    border: none;
 }
 #rating-submit:hover{
-    background-color: #4bf3e2c4;
+    background-color: #28a7465d !important;
 }
 
+.rate-head{
+    font-size: 20px;
+    text-align: left;
+}
 /**star rating*/
 .stars-outer {
   position: relative;
@@ -160,4 +170,8 @@ button:hover{
   .column{
     width:100%;
   }
+}
+.footer-bottom{
+    margin-top:7em;
+    bottom:0;
 }
