--- a/views/rating.hbs
+++ b/views/rating.hbs
@@ -9,22 +9,12 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-rate">
     {{> _header}}
     <div class="row">
         <div class="column">
-       
-        <h2>Rate your favourite parties</h2>
+        <h2 class="rate-head" style="margin-left:5em;">Rate your favourite parties</h2>
         <form method="post" class="rate-form">
-            <div class="txt_field">
-                <input type="text" placeholder=" " id="name" required>
-    
-                <label>Username</label>
-            </div>
-            <div class="txt_field">
-                <input type="number" placeholder=" " required>
-                <label>Age</label>
-            </div>
             <div class="rate">
                 <div class="form-group">
                     <select id="product-select" class="form-control custom-select">
@@ -47,14 +37,14 @@
       </div>
       <div class="column">
          <div class="rating-results-user">
-             <h2 style="margin-right:150px;">View Your Ratings</h2>
+             <h2 style="margin-right:180px;" class="rate-head">View party ratings</h2>
            <!--rating table-->
            
-  <table class="table table-striped" style="width:80%;background-color:white;">
+  <table style="width:80%;background-color:transparent;border:1px solid white;color:white">
     <thead>
       <tr>
-        <th>Party Name</th>
-        <th>Rating</th>
+        <th style="text-align:left; font-size:20px;">Party Name</th>
+        <th style="text-align:left; font-size:20px;">Rating</th>
       </tr>
     </thead>
     <tbody>
